--- a/src/styles.css
+++ b/src/styles.css
@@ -6,10 +6,13 @@
 .search-container {
   position: relative;
   width: 100%;
+  min-width: 30em;
+  min-height: 22em;
 }
 
 .search-input {
   width: 100%;
+  position: relative;
   line-height: 115%;
   padding: 0.75rem 0.5rem;
   padding-inline-start: 1rem;
@@ -27,11 +30,10 @@
 
 .suggestions-dropdown {
   position: absolute;
-  top: 100%;
+  top: 1em;
+  padding-top: 2em;
   left: 0;
   right: 0;
-  background: white;
-  border: 1px solid whitesmoke;
   border-top: none;
   border-radius: 0 0 1rem 1rem;
   max-height: 200px;
@@ -43,7 +45,8 @@
 .suggestion-item {
   padding: 12px 16px;
   cursor: pointer;
-  border-bottom: 1px solid #f1f3f5;
+  border: 1px solid #whitesmoke;
+  background-color: white;
   transition: background-color 0.2s ease;
 }
 
