--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 .search-container {
   position: relative;
   width: 100%;
-  min-width: 30em;
+  min-width: 20em;
   min-height: 22em;
 }
 
@@ -45,7 +45,7 @@
 .suggestion-item {
   padding: 12px 16px;
   cursor: pointer;
-  border: 1px solid #whitesmoke;
+  border: 1px solid whitesmoke;
   background-color: white;
   transition: background-color 0.2s ease;
 }
@@ -89,6 +89,29 @@
 .office-info {
   display: grid;
   gap: 0.5em;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* évite un retour à la ligne */
+  border: 0;
+}
+
+hr {
+  width: 100%;
+  color: #e1e5e9;
 }
 
 .icon {
